--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body.no-scroll {
     text-align: right;
     padding: 10px;
     background-color: rgba(0, 0, 0, 0.8);
-    position: fixed;
+    /* position: fixed; */
 
     a {
         color: white;
@@ -217,7 +217,7 @@ body.no-scroll {
                 margin-top: 10px;
             }
             #readMorePoke:hover {
-                background-color: rgba(1, 1, 7, 0.946);
+                background-color: rgba(4, 4, 20, 1);
             }
         }
         #pokemonCard:hover {
