--- a/src/App.css
+++ b/src/App.css
@@ -11,12 +11,12 @@ body {
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
-    
+
 }
 
 body.no-scroll {
     overflow-y: hidden;
-  }
+}
 
 /* Nav Header Styling Start */
 #topnav {
@@ -144,14 +144,16 @@ body.no-scroll {
         justify-content: center;
         gap: 50px;
         margin-bottom: 20px;
+
         #searchContainer,
         #typeContainer {
             display: flex;
             gap: 10px;
+
             label {
                 font-size: 1.8em;
                 color: rgb(251, 240, 229);
-                
+
             }
         }
     }
@@ -176,37 +178,58 @@ body.no-scroll {
             justify-content: space-between;
             gap: 10px;
             max-width: 100%;
-            transition: ease 0.5s ;
+            transition: ease 0.5s;
+
             img {
                 width: 90%;
             }
+
             #otherPokeInfo {
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 gap: 20px;
+
                 #pokeID {
                     font-size: 2em;
                     color: rgba(247, 222, 201, 0.691);
-                    transition: ease 0.5s ;
+                    transition: ease 0.5s;
                 }
+
                 #nameType {
                     #pokeName {
                         font-size: 2em;
                         text-transform: uppercase;
                         font-weight: 700;
                         color: rgba(247, 222, 201, 0.894);
-                        transition: ease 0.5s ;
+                        transition: ease 0.5s;
                     }
-                    #pokeTypes {
-                        font-size: 1.3em;
-                        color: rgba(247, 222, 201, 0.691);
-                        transition: ease 0.5s ;
+
+                    #pokemonTypeContainer {
+                        display: flex;
+                        width: 200px;
+                        background-color: rgba(19, 18, 27, 0.6);
+                        border: 3px rgb(19, 18, 27) solid;
+
+                        #typeBox {
+                            width: 20px;
+                            height: 20px;
+                        }
+
+                        #pokeTypes {
+                            font-size: 1.3em;
+                            color: rgba(247, 222, 201, 0.691);
+                            transition: ease 0.5s;
+                        }
                     }
+
+
+
                 }
-                
+
 
             }
+
             #readMorePoke {
                 padding: 20px 0;
                 width: 100%;
@@ -216,31 +239,117 @@ body.no-scroll {
                 color: #d6c2a7;
                 margin-top: 10px;
             }
+
             #readMorePoke:hover {
                 background-color: rgba(4, 4, 20, 1);
             }
         }
+
         #pokemonCard:hover {
             border: 4px solid rgb(251, 219, 188);
             background-color: rgba(244, 219, 195, 0.6);
-            transition: ease 0.5s ;
+            transition: ease 0.5s;
+
             #otherPokeInfo {
                 #pokeID {
                     color: rgb(19, 18, 27);
-                    transition: ease 0.5s ;
+                    transition: ease 0.5s;
                 }
+
                 #nameType {
-                    #pokeName,
-                    #pokeTypes {
+                    #pokeName {
                         color: rgb(19, 18, 27);
-                        transition: ease 0.5s ;
+                        transition: ease 0.5s;
                     }
+
+                    #pokemonTypeContainer {
+                        background-color: rgba(247, 222, 201, 0.5);
+
+                        #pokeTypes {
+                            color: rgb(19, 18, 27);
+                            transition: ease 0.5s;
+                        }
+                    }
+
                 }
             }
         }
     }
 }
+
 /* Home Styling End */
+
+/* SIngle oage pokemon styling */
+#singlePokemonPage {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+
+    #singlePokemonButtonContainer {
+        display: flex;
+        width: 100%;
+        justify-content: space-between;
+        padding: 20px;
+    }
+
+    #singlePokemonContainer {
+        display: flex;
+        width: 90%;
+        border: 4px solid rgb(19, 18, 27);
+        background-color: rgba(11, 11, 16, 0.6);
+        padding: 20px;
+
+        img {
+            width: 40%;
+        }
+
+        #singlePokemonInfo {
+            width: 60%;
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            #singlePokemonName {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                background-color: rgba(244, 219, 195, 1);
+                padding: 15px;
+                width: 98%;
+                font-size: 1.8em;
+            }
+        }
+
+        #singlePokemonTypes {
+            display: flex;
+            width: 300px;
+            background-color: rgba(19, 18, 27, 0.6);
+            border: 3px rgb(19, 18, 27) solid;
+
+            #individualTypeBox {
+                padding: 10px;
+                display: flex;
+                gap: 10px;
+                align-items: center;
+                p {
+                    font-size: 1.3em;
+                    color: rgba(247, 222, 201, 0.691);
+                    transition: ease 0.5s;
+                    text-transform: uppercase;
+                }
+            }
+
+            #individualColourTypeBox {
+                width: 40px;
+                height: 40px;
+            }
+        }
+
+    }
+}
+
 
 /* Footer Styling Start */
 
@@ -251,7 +360,11 @@ footer {
     padding: 30px;
     background-color: #1f1f1f;
     color: white;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
+
 /* Footer styling end */
 
 /* Media queries */
