--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,9 @@
 
 body {
     background-color: #d6c2a7;
+    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    backdrop-filter: blur(3px);
+    -webkit-backdrop-filter: blur(3px);
     background-image: linear-gradient(rgba(63, 23, 13, 0.658), rgba(67, 35, 27, 0.547)), url("/img/bg.webp");
     background-position: center;
     background-size: cover;
@@ -130,9 +133,8 @@ body.no-scroll {
     align-items: center;
 
     h1 {
-        font-size: 8em;
-        color: aliceblue;
-        padding-top: 70px;
+        font-size: 6em;
+        margin-top: 20px;
         margin-bottom: 20px;
         text-transform: uppercase;
         color: rgb(251, 240, 229);
@@ -160,36 +162,34 @@ body.no-scroll {
 
     #pokemonDisplayGrid {
         display: grid;
-        grid-template-columns: repeat(4, 1fr);
         grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-        grid-row: auto;
         max-width: 100%;
         padding: 15px;
         gap: 2em;
 
         #pokemonCard {
             display: flex;
-            flex-direction: column;
-            justify-content: center;
+
+            justify-content: space-between;
             align-items: center;
             padding: 10px;
             border: 4px solid rgb(19, 18, 27);
             border-radius: 3px;
-            background-color: rgba(11, 11, 16, 0.6);
+            background-color: rgba(11, 11, 16, 0.55);
             justify-content: space-between;
             gap: 10px;
             max-width: 100%;
             transition: ease 0.5s;
 
             img {
-                width: 90%;
+                width: 40%;
             }
 
             #otherPokeInfo {
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                gap: 30px;
+                gap: 20px;
 
                 #pokeID {
                     font-size: 2em;
@@ -292,23 +292,41 @@ body.no-scroll {
 #singlePokemonPage {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 100vh;
 
     #singlePokemonButtonContainer {
         display: flex;
-        width: 100%;
+        width: 97%;
         justify-content: space-between;
         padding: 20px;
+        margin-top: 20px;
+
+        button {
+            font-size: 1.4em;
+            padding: 20px 50px;
+            margin-bottom: 20px;
+            border: 4px solid rgb(19, 18, 27);
+            background-color: rgba(11, 11, 16, 0.832);
+            color: rgb(251, 240, 229);
+            border-radius: 3px;
+            transition: ease 0.5s;
+            text-transform: uppercase;
+        }
+
+        button:hover {
+            background-color: rgba(4, 4, 20, 1);
+            transition: ease 0.5s;
+        }
     }
 
     #singlePokemonContainer {
         display: flex;
-        width: 90%;
+        width: 95%;
         border: 4px solid rgb(19, 18, 27);
-        background-color: rgba(11, 11, 16, 0.6);
+        background-color: rgba(11, 11, 16, 0.55);
         padding: 20px;
+        gap: 20px;
 
         img {
             width: 40%;
@@ -328,6 +346,12 @@ body.no-scroll {
                 padding: 15px;
                 width: 98%;
                 font-size: 1.8em;
+                border-radius: 30px;
+            }
+
+            button {
+                background-color: rgba(4, 4, 20, 1);
+                transition: ease 0.5s;
             }
         }
 
@@ -342,6 +366,7 @@ body.no-scroll {
                 display: flex;
                 gap: 10px;
                 align-items: center;
+
                 p {
                     font-size: 1.3em;
                     color: rgba(247, 222, 201, 0.691);
@@ -370,14 +395,15 @@ footer {
     background-color: #1f1f1f;
     color: white;
     width: 100%;
+    align-self: flex-end;
 }
 
 /* Footer styling end */
 
 /* Media queries */
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 600px) {
     h1 {
-        font-size: 60px;
+        font-size: 1em;
     }
 
     #menu {
@@ -395,6 +421,13 @@ footer {
 
     #pokemonDisplayGrid {
         grid-template-columns: repeat(4, 1fr);
+        #pokemonCard {
+            flex-direction: column;
+            img {
+                width: 90%;
+            }
+        }
+
     }
 
 }
