--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Nanum+Brush+Script&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=Nanum+Brush+Script&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -28,7 +31,7 @@ body.no-scroll {
     align-items: space-between;
     text-align: right;
     padding: 10px;
-    background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(11, 11, 16, 0.8);
     /* position: fixed; */
 
     a {
@@ -38,7 +41,7 @@ body.no-scroll {
         font-size: 18px;
         margin-top: 5px;
         display: inline-block;
-        font-size: 1.3em;
+        font-size: 1.8em;
     }
 
     #logo,
@@ -46,6 +49,7 @@ body.no-scroll {
         a {
             color: aliceblue;
             text-decoration: none;
+            font-family: "Nanum Brush Script", cursive;
 
         }
 
@@ -95,7 +99,7 @@ body.no-scroll {
 #mobileMenu {
     width: 100%;
     height: 100%;
-    background-color: #1f1f1f;
+    background-color: rgba(11, 11, 16, 1);
     position: fixed;
     z-index: 1;
     top: 0;
@@ -110,6 +114,7 @@ body.no-scroll {
         text-align: center;
         margin-top: 20px;
         font-weight: 700;
+        font-family: "Nanum Brush Script", cursive;
     }
 }
 
@@ -133,30 +138,50 @@ body.no-scroll {
     align-items: center;
 
     h1 {
-        font-size: 6em;
+        font-size: 5.4em;
         margin-top: 20px;
         margin-bottom: 20px;
         text-transform: uppercase;
         color: rgb(251, 240, 229);
+        font-family: "Nanum Brush Script", cursive;
     }
 
     #filterContainer {
         width: 100%;
         display: flex;
         justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        width: 100%;
         gap: 50px;
         margin-bottom: 20px;
 
         #searchContainer,
         #typeContainer {
             display: flex;
+            align-items: center;
             gap: 10px;
 
             label {
-                font-size: 1.8em;
+                font-size: 1.6em;
                 color: rgb(251, 240, 229);
-
+                font-family: "IBM Plex Mono", monospace;
+                font-weight: 400;
+                font-style: normal;
             }
+
+            input,
+            select {
+                font-size: 1.1em;
+                font-family: "IBM Plex Mono", monospace;
+                font-weight: 400;
+                font-style: normal;
+                padding: 5px;
+                background-color: rgba(251, 240, 229, 0.9);
+                border: 2px solid rgb(251, 240, 229);
+                border-radius: 3px;
+            }
+
         }
     }
 
@@ -169,20 +194,18 @@ body.no-scroll {
 
         #pokemonCard {
             display: flex;
-
-            justify-content: space-between;
             align-items: center;
+            justify-content: center;
             padding: 10px;
             border: 4px solid rgb(19, 18, 27);
             border-radius: 3px;
             background-color: rgba(11, 11, 16, 0.55);
-            justify-content: space-between;
-            gap: 10px;
+            gap: 20px;
             max-width: 100%;
             transition: ease 0.5s;
 
             img {
-                width: 40%;
+                width: 35%;
             }
 
             #otherPokeInfo {
@@ -192,24 +215,35 @@ body.no-scroll {
                 gap: 20px;
 
                 #pokeID {
-                    font-size: 2em;
+                    font-size: 1.7em;
                     color: rgba(247, 222, 201, 0.691);
                     transition: ease 0.5s;
+                    font-family: "IBM Plex Mono", monospace;
+                    font-weight: 400;
+                    font-style: normal;
+
                 }
 
                 #nameType {
+                    display: flex;
+                    flex-direction: column;
+
                     #pokeName {
-                        font-size: 2em;
+                        font-size: 1.8em;
                         text-transform: uppercase;
                         font-weight: 700;
                         color: rgba(247, 222, 201, 0.894);
                         transition: ease 0.5s;
+                        font-family: "IBM Plex Mono", monospace;
+                        font-weight: 400;
+                        font-style: normal;
                         margin-bottom: 10px;
+
                     }
 
                     #pokemonTypeContainer {
                         display: flex;
-                        width: 250px;
+                        width: 200px;
                         background-color: rgba(19, 18, 27, 0.6);
                         border: 3px rgb(19, 18, 27) solid;
                         transition: ease 0.5s;
@@ -222,10 +256,13 @@ body.no-scroll {
                         }
 
                         #pokeTypes {
-                            font-size: 1.3em;
+                            font-size: 1.1em;
                             color: rgba(247, 222, 201, 0.691);
                             transition: ease 0.5s;
                             text-transform: uppercase;
+                            font-family: "IBM Plex Mono", monospace;
+                            font-weight: 400;
+                            font-style: normal;
                         }
                     }
 
@@ -236,8 +273,9 @@ body.no-scroll {
 
             }
 
+            #readMorePokeMobile,
             #readMorePoke {
-                padding: 20px 0;
+                padding: 10px 0;
                 width: 100%;
                 background-color: rgba(4, 4, 20, 0.746);
                 border: none;
@@ -245,11 +283,24 @@ body.no-scroll {
                 color: #d6c2a7;
                 margin-top: 10px;
                 transition: ease 0.5s;
+                font-family: "IBM Plex Mono", monospace;
+                font-weight: 400;
+                font-style: normal;
+                font-size: 0.8em;
             }
 
+            #readMorePokeMobile:hover,
             #readMorePoke:hover {
                 background-color: rgba(4, 4, 20, 1);
                 transition: ease 0.5s;
+            }
+
+            #readMorePokeMobile {
+                display: block;
+            }
+
+            #readMorePoke {
+                display: none;
             }
         }
 
@@ -312,6 +363,9 @@ body.no-scroll {
             border-radius: 3px;
             transition: ease 0.5s;
             text-transform: uppercase;
+            font-family: "IBM Plex Mono", monospace;
+            font-weight: 400;
+            font-style: normal;
         }
 
         button:hover {
@@ -337,52 +391,143 @@ body.no-scroll {
             display: flex;
             flex-direction: column;
             gap: 20px;
+            margin-bottom: 20px;
 
             #singlePokemonName {
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
                 background-color: rgba(244, 219, 195, 1);
-                padding: 15px;
+                padding: 10px 28px;
                 width: 98%;
                 font-size: 1.8em;
                 border-radius: 30px;
+
+                p {
+                    font-size: 1.5em;
+                }
+
+                h2 {
+                    font-size: 2em;
+                }
+
+                p,
+                h2 {
+                    font-family: "Nanum Brush Script", cursive;
+                }
+
             }
 
             button {
-                background-color: rgba(4, 4, 20, 1);
+                color: rgb(11, 11, 16);
+                border: 4px solid rgb(19, 18, 27);
+                background-color: rgba(11, 11, 16, 0.098);
+                padding: 10px 20px;
+                border-radius: 10px;
                 transition: ease 0.5s;
+                font-family: "IBM Plex Mono", monospace;
+                font-weight: 400;
+                font-style: normal;
+                font-size: 0.7em;
+                text-transform: uppercase;
             }
-        }
 
-        #singlePokemonTypes {
-            display: flex;
-            width: 300px;
-            background-color: rgba(19, 18, 27, 0.6);
-            border: 3px rgb(19, 18, 27) solid;
+            button:hover {
+                background-color: rgb(11, 11, 16);
+                color: rgba(244, 219, 195, 1);
+            }
 
-            #individualTypeBox {
-                padding: 10px;
+            #singlePokemonMoreInfo {
+                width: 98%;
                 display: flex;
-                gap: 10px;
-                align-items: center;
 
-                p {
-                    font-size: 1.3em;
-                    color: rgba(247, 222, 201, 0.691);
-                    transition: ease 0.5s;
-                    text-transform: uppercase;
+                #singlePokemonTypes {
+                    display: flex;
+                    width: 100%;
+                    background-color: rgba(19, 18, 27, 0.6);
+                    border: 3px rgb(19, 18, 27) solid;
+
+                    #individualTypeBox {
+                        padding: 10px;
+                        display: flex;
+                        gap: 10px;
+                        align-items: center;
+
+                        p {
+                            font-size: 1.3em;
+                            color: rgba(247, 222, 201, 0.691);
+                            transition: ease 0.5s;
+                            text-transform: uppercase;
+                            font-family: "IBM Plex Mono", monospace;
+                            font-weight: 400;
+                            font-style: normal;
+                        }
+                    }
+
+                    #individualColourTypeBox {
+                        width: 40px;
+                        height: 40px;
+                    }
+
+
+                }
+
+                #pokeMeasure {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: space-between;
+                    align-items: flex-end;
+                    width: 100%;
+
+                    #heightMeasure,
+                    #weightMeasure {
+                        display: flex;
+                        gap: 10px;
+                        height: 45%;
+                        width: 95%;
+                        justify-content: flex-end;
+                        align-items: center;
+                        gap: 30px;
+                        padding: 10px;
+                        background-color: rgba(19, 18, 27, 0.6);
+                        border: 3px rgb(19, 18, 27) solid;
+                        color: rgba(247, 222, 201, 0.818);
+
+                        p {
+                            font-size: 1.3em;
+                            font-family: "IBM Plex Mono", monospace;
+                            font-weight: 400;
+                            font-style: normal;
+                        }
+                    }
+
                 }
             }
 
-            #individualColourTypeBox {
-                width: 40px;
-                height: 40px;
+            #abilityInfo {
+                font-size: 1.8em;
+                font-family: "IBM Plex Mono", monospace;
+                font-weight: 400;
+                font-style: normal;
+                text-transform: capitalize;
+                padding: 20px;
+                background-color: rgba(19, 18, 27, 0.6);
+                border: 3px rgb(19, 18, 27) solid;
+                color: rgba(247, 222, 201, 0.818);
+
             }
         }
 
+
+
+
+
+
+
     }
 }
+
+
 
 
 /* Footer Styling Start */
@@ -392,20 +537,21 @@ footer {
     align-items: center;
     justify-content: center;
     padding: 30px;
-    background-color: #1f1f1f;
+    background-color: rgba(11, 11, 16, 0.8);
     color: white;
     width: 100%;
     align-self: flex-end;
+    font-family: "IBM Plex Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+    position: absolute;
+    bottom: 0;
 }
 
 /* Footer styling end */
 
 /* Media queries */
-@media screen and (min-width: 600px) {
-    h1 {
-        font-size: 1em;
-    }
-
+@media screen and (min-width: 650px) {
     #menu {
         display: block;
         width: 75%;
@@ -419,15 +565,66 @@ footer {
         display: none;
     }
 
+    #filterContainer {
+        flex-direction: row;
+    }
+
     #pokemonDisplayGrid {
-        grid-template-columns: repeat(4, 1fr);
         #pokemonCard {
             flex-direction: column;
+
             img {
                 width: 90%;
             }
         }
 
+    }
+
+    #readMorePokeMobile {
+        display: none;
+    }
+
+    #readMorePokeMobile {
+        display: block;
+    }
+
+    #nameType {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    #singlePokemonContainer {
+
+
+        img {
+            width: 40%;
+        }
+
+
+    }
+
+    #readMorePokeMobile,
+    #readMorePoke {
+        padding: 20px 0;
+        width: 100%;
+        margin-top: 10px;
+        transition: ease 0.5s;
+        font-size: 1.2em;
+    }
+
+    #readMorePokeMobile:hover,
+    #readMorePoke:hover {
+        background-color: rgba(4, 4, 20, 1);
+        transition: ease 0.5s;
+    }
+
+    #readMorePokeMobile {
+        display: block;
+    }
+
+    #readMorePoke {
+        display: none;
     }
 
 }
