--- a/src/App.css
+++ b/src/App.css
@@ -534,15 +534,20 @@ body.no-scroll {
 
 footer {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     padding: 30px;
+    gap: 10px;
     background-color: rgba(11, 11, 16, 0.8);
-    color: white;
     width: 100%;
-    font-family: "IBM Plex Mono", monospace;
-    font-weight: 400;
-    font-style: normal;
+    
+    p {
+        font-family: "IBM Plex Mono", monospace;
+        font-weight: 400;
+        font-style: normal;
+        color: white;
+    }
 }
 
 /* Footer styling end */
