--- a/src/App.css
+++ b/src/App.css
@@ -96,6 +96,28 @@ body.no-scroll {
     }
 }
 
+.primary-button {
+    font-size: 0.8em;
+    padding: 10px;
+    background-color: rgba(11, 11, 16, 0.55);
+    border: 2px solid rgb(4, 4, 20);
+    color: rgb(251, 240, 229);
+    border-radius: 3px;
+    transition: ease 0.3s;
+    text-transform: uppercase;
+    font-family: "IBM Plex Mono", monospace;
+    font-weight: 400;
+    font-style: normal;
+}
+
+.primary-button:hover {
+    background-color: rgba(251, 240, 229, 0.9);
+    border: 2px solid rgb(251, 240, 229);
+    transition: ease 0.3s;
+    color: rgba(11, 11, 16, 1);
+
+}
+
 #mobileMenu {
     width: 100%;
     height: 100%;
@@ -139,8 +161,8 @@ body.no-scroll {
 
     h1 {
         font-size: 5.4em;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        margin-top: 30px;
+        margin-bottom: 30px;
         text-transform: uppercase;
         color: rgb(251, 240, 229);
         font-family: "Nanum Brush Script", cursive;
@@ -151,10 +173,10 @@ body.no-scroll {
         display: flex;
         justify-content: center;
         align-items: center;
-        flex-direction: column;
+        /* flex-direction: column; */
         width: 100%;
         gap: 50px;
-        margin-bottom: 20px;
+        margin-bottom: 40px;
 
         #searchContainer,
         #typeContainer {
@@ -205,7 +227,7 @@ body.no-scroll {
             transition: ease 0.5s;
 
             img {
-                width: 35%;
+                width: 43%;
             }
 
             #otherPokeInfo {
@@ -231,13 +253,11 @@ body.no-scroll {
                     #pokeName {
                         font-size: 1.8em;
                         text-transform: uppercase;
-                        font-weight: 700;
                         color: rgba(247, 222, 201, 0.894);
                         transition: ease 0.5s;
                         font-family: "IBM Plex Mono", monospace;
                         font-weight: 400;
                         font-style: normal;
-                        margin-bottom: 10px;
 
                     }
 
@@ -295,12 +315,12 @@ body.no-scroll {
                 transition: ease 0.5s;
             }
 
-            #readMorePokeMobile {
+            /* #readMorePokeMobile {
                 display: block;
-            }
+            } */
 
             #readMorePoke {
-                display: none;
+                display: block;
             }
         }
 
@@ -582,13 +602,13 @@ footer {
 
     }
 
-    #readMorePokeMobile {
+    /* #readMorePokeMobile {
         display: none;
     }
 
     #readMorePokeMobile {
         display: block;
-    }
+    } */
 
     #nameType {
         display: flex;
@@ -602,7 +622,6 @@ footer {
         img {
             width: 40%;
         }
-
 
     }
 
